--- a/src/app/error-page/error-page.component.html
+++ b/src/app/error-page/error-page.component.html
@@ -1,2 +1,9 @@
-<p>error-page works!</p>
-<button routerLink="/">Return home</button>
+<div class="c-error">
+  <h1 class="c-error__title">Unexpected error occured.</h1>
+  <h2 class="c-error__status">Error status : 404</h2>
+  <div class="c-error__message">
+    Error message :
+    <h3>Page not found</h3>
+  </div>
+  <button mat-raised-button color="primary" routerLink="/">Return home</button>
+</div>
